2005-11-18 Borut Razem <borut.razem AT siol.net>

	* sdcc/device/lib/Makefile.in: remove all unnecessary files
	* device/lib/pic/Makefile.rules, device/lib/pic16/Makefile.subdir:
	  introduced SILENT option to make building of pic16 libraries less

2005-11-18 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/modff.c, device/lib/ceilf.c, device/lib/floorf.c:
	  Now they work properly with floats between -1.0 and 0.0
	* device/lib/printf_large.c: Removed temporary patch for bug 1358192

2005-11-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (printOperand): added missing else

2005-11-18 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCsymt.c (computeType): fixed bug 1358192: added missing else,
	reformatted for	better readability
	* src/mcs51/gen.c (genUnpackBits): initial, incomplete support for
	signed bitfields

2005-11-17 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/Makefile.rules, device/lib/pic16/Makefile.subdir:
	  introduced SILENT option to make building of pic16 libraries less
	  verbose - used for nightly snapshot build
	* doc/sdccman.lyx: documented that SDCDB and ucSim are currently not
	  available on Win32 platforms.
	* sdcc/device/lib/Makefile.in: added library sources for mcs51, small,
	  medium, large, pic and pic16

2005-11-16 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/printf_large.c: Temporary patch for bug 1358192:
	  printf("%f"...) sets fraction to zero.

2005-11-16 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (LinkFlow): handle empty flows correctly,
	  fixes #1357221
	* src/pic/gen.c (genIfx): implemented for CARRY bit
	* src/pic16/gen.c (genAssign,genCast): fixed assigning/casting
	  to generic pointers, fixes #1357332,
	  (pic16_movLit2f): NEW,
	  (pic16_storeForReturn,genDataPointerSet): use pic16_movLit2f

2005-11-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (parseCmdLine): fixed bug 1356800, thanks rsudjian
